--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "deploy": "gh-pages -d example/build"
   },
   "dependencies": {
+    "color": "^3.1.2",
     "react-jss": "^10.0.4"
   },
   "peerDependencies": {
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
+    "@types/color": "^3.0.1",
     "@types/jest": "^23.1.5",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
