--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "deploy": "gh-pages -d example/build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-brands-svg-icons": "^5.12.1",
+    "@fortawesome/free-regular-svg-icons": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "color": "^3.1.2",
     "react-jss": "^10.0.4"
   },
