--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A cleaner, better design system for ReactJS",
   "author": "JakeAdmire",
   "license": "MIT",
+  "homepage": "http://blueprints-ui.com",
   "repository": "JakeAdmire/blueprints-ui",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -27,8 +28,10 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@types/uuid": "^7.0.2",
     "color": "^3.1.2",
-    "react-jss": "^10.0.4"
+    "react-jss": "^10.0.4",
+    "uuid": "^7.0.2"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
