--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "npm": ">=5"
   },
   "scripts": {
-    "test": "cross-env CI=1 react-scripts-ts test --env=jsdom",
+    "test": "cross-env react-scripts-ts test --env=jsdom --watch",
     "test:watch": "react-scripts-ts test --env=jsdom",
     "build": "rollup -c",
     "start": "rollup -c -w",
@@ -42,17 +42,22 @@
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
     "@types/color": "^3.0.1",
-    "@types/jest": "^23.1.5",
+    "@types/enzyme": "^3.1.0",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^25.1.4",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
     "coveralls": "^3.0.11",
     "cross-env": "^5.1.4",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.2",
+    "enzyme-to-json": "^3.4.4",
     "gh-pages": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts-ts": "^2.16.0",
+    "react-scripts-ts": "^2.8.0",
     "rollup": "^0.62.0",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
@@ -61,9 +66,17 @@
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-typescript2": "^0.17.0",
     "rollup-plugin-url": "^1.4.0",
+    "ts-jest": "^22.4.6",
     "typescript": "^2.8.3"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,ts,tsx}",
+      "!src/index.tsx",
+      "!src/typings.d.ts"
+    ]
+  }
 }
