--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/enzyme": "^3.1.0",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^25.1.4",
+    "@types/node": "^13.11.1",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
     "babel-core": "^6.26.3",
